[project]
name = "symet-decode"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Opliko", email = "opliko.reg@protonmail.com" }
]
dependencies = [
    "numpy>=1.26.4",
    "matplotlib>=3.9.0",
    "scipy>=1.13.1",
    "ipython>=8.25.0",
    "jupyterlab>=4.2.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []
virtual = true
[tool.hatch.metadata]
allow-direct-references = true
